<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_active_homebutton"
        android:iconTintMode="add"
        android:title="@string/title_home"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="false"
        android:icon="@drawable/ic_active_dashbutton"
        android:title="@string/title_dashboard"
        app:showAsAction="always" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_acess_config"
        android:title="@string/title_notifications" />

</menu>